Reorganize table of contents.
- Eliminate Message chapter, Command will cover that.
- Move Subclass Sandbox into Behaving Patterns.
- Rename Virtual Machine to Bytecode.

--- a/html/subclass-sandbox.html
+++ b/html/subclass-sandbox.html
@@ -73,7 +73,7 @@ their shared base class.</em></p>
 often means a data-driven approach is better. Instead of lots of
 <em>code</em> for defining different powers, try finding a way to define that behavior
 in <em>data</em> instead.</p>
-<p>Patterns like <a class="pattern" href="type-object.html">Type Object</a>, <a class="pattern" href="virtual-machine.html">Virtual Machine</a>, and <a class="gof-pattern" href="http://en.wikipedia.org/wiki/Interpreter_pattern">Interpreter</a> can all help.</p>
+<p>Patterns like <a class="pattern" href="type-object.html">Type Object</a>, <a class="pattern" href="bytecode.html">Bytecode</a>, and <a class="gof-pattern" href="http://en.wikipedia.org/wiki/Interpreter_pattern">Interpreter</a> can all help.</p>
 </aside>
 
 <p>We want to immerse our players in a world teeming with variety. Whatever power they dreamed up when they were a kid, we want in our game. That means these superpower subclasses will need to do just about everything: play sounds, spawn visual effects, interact with AI, create and destroy other game entities, and mess with physics. There&#x2019;s no corner of the codebase that won&#x2019;t get touched by them.</p>
