--- a/html/type-object.html
+++ b/html/type-object.html
@@ -334,7 +334,7 @@ in <em>our</em> type objects.</p>
 <p>Another more powerful solution is to actually support defining
 behavior completely in <span name="data">data</span>. The <a class="gof-pattern"
 href="http://c2.com/cgi-bin/wiki?InterpreterPattern">Interpreter</a>,
-and <a class="pattern" href="virtual-machine">Virtual Machine</a>
+and <a class="pattern" href="bytecode.html">Bytecode</a>
 patterns both let us build objects that represent behavior. If we read
 in a data file and use that to create a data structure for one of
 these patterns, we&#x2019;ve moved the behavior&#x2019;s definition completely out
