--- a/html/bytecode.html
+++ b/html/bytecode.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Communicating Patterns / Message</title>
+<title>Game Programming Patterns / Behaving Patterns / Bytecode</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -22,8 +22,8 @@
 </head>
 <body id="top">
 <div class="content">
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / Communicating Patterns</h1>
-<h1>Message</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a> / Behaving Patterns</h1>
+<h1>Bytecode</h1>
 <div class="in-progress">
   <span class="dismiss">&times;</span>
   <p><strong>This book is a work in progress!</strong></p>
