--- a/html/index.html
+++ b/html/index.html
@@ -72,39 +72,38 @@
       </ul>
   </li>
   <li>Game Programming Patterns
-      <ul>
-          <li><a href="sequencing-patterns.html">Sequencing Patterns</a>
-              <ul>
-                  <li><a href="game-loop.html">Game Loop</a></li>
-                  <li><a href="update-method.html">Update Method</a></li>
-                  <li><a href="double-buffer.html">Double Buffer</a></li>
-              </ul>
-          </li>
-          <li>Behaving Patterns
-              <ul>
-                  <li><a href="component.html">Component</a></li>
-                  <li><a href="type-object.html">Type Object</a></li>
-                  <li><a href="subclass-sandbox.html">Subclass Sandbox</a></li>
-                  <li>Context Parameter</li>
-                  <li>Virtual Machine</li>
-              </ul>
-          </li>
-          <li>Communicating Patterns
-              <ul>
-                  <li><a href="service-locator.html">Service Locator</a></li>
-                  <li>Message</li>
-                  <li>Message Queue</li>
-              </ul>
-          </li>
-          <li>Optimizing Patterns
-              <ul>
-                  <li><a href="dirty-flag.html">Dirty Flag</a></li>
-                  <li><a href="object-pool.html">Object Pool</a></li>
-                  <li><a href="spatial-partition.html">Spatial Partition</a></li>
-                  <li>Structure of Arrays</li>
-              </ul>
-          </li>
-      </ul>
+    <ul>
+      <li><a href="sequencing-patterns.html">Sequencing Patterns</a>
+        <ul>
+          <li><a href="double-buffer.html">Double Buffer</a></li>
+          <li><a href="game-loop.html">Game Loop</a></li>
+          <li><a href="update-method.html">Update Method</a></li>
+        </ul>
+      </li>
+      <li>Behaving Patterns
+        <ul>
+          <li>Bytecode</li>
+          <li><a href="component.html">Component</a></li>
+          <li><a href="subclass-sandbox.html">Subclass Sandbox</a></li>
+          <li><a href="type-object.html">Type Object</a></li>
+        </ul>
+      </li>
+      <li>Communicating Patterns
+        <ul>
+          <li>Context Parameter</li>
+          <li>Message Queue</li>
+          <li><a href="service-locator.html">Service Locator</a></li>
+        </ul>
+      </li>
+      <li>Optimizing Patterns
+        <ul>
+          <li><a href="dirty-flag.html">Dirty Flag</a></li>
+          <li><a href="object-pool.html">Object Pool</a></li>
+          <li><a href="spatial-partition.html">Spatial Partition</a></li>
+          <li>Structure of Arrays</li>
+        </ul>
+      </li>
+    </ul>
   </li>
 </ul>
 <p class="footer">&copy; 2009-2013 Bob Nystrom</p>
