--- a/html/index.html
+++ b/html/index.html
@@ -66,7 +66,7 @@
           <li>Prototype</li>
           <li><a href="singleton.html">Singleton</a></li>
           <li><a href="flyweight.html">Flyweight</a></li>
-          <li>Command</li>
+          <li><a href="command.html">Command</a></li>
           <li>Observer</li>
           <li><a href="state.html">State</a></li>
       </ul>
