--- a/html/dirty-flag.html
+++ b/html/dirty-flag.html
@@ -64,7 +64,7 @@
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Avoid unnecessary work by deferring it until the result is needed.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
-<p>"Flag" and "bit" are synonymous in programming: they both mean a single micron of data that can be in one of two states. With bits we call them "true" and "false". For flags, you sometimes hear "set" and "cleared". I&#x2019;ll use all of these interchangeably. "Dirty bit" is an equally <span name="specific">common</span> name for this pattern, but I figured I&#x2019;d stick with the name that didn&#x2019;t seem as prurient.</p>
+<p>"Flag" and "bit" are synonymous in programming: they both mean a single micron of data that can be in one of two states. We call those "true" and "false", or sometimes "set" and "cleared". I&#x2019;ll use all of these interchangeably. "Dirty bit" is an equally <span name="specific">common</span> name for this pattern, but I figured I&#x2019;d stick with the name that didn&#x2019;t seem as prurient.</p>
 <aside name="specific">
 
 <p>Wikipedia&#x2019;s editors don&#x2019;t have my level of self-control and went with <a href="http://en.wikipedia.org/wiki/Dirty_bit">dirty bit</a>.</p>
